add content top

--- a/index.html
+++ b/index.html
@@ -54,46 +54,55 @@
 
         <!-- Content  -->
         
-        <div class="content-top">conten-top
+        <div class="content-top">
+            <div>
+                <div id="news">LATEST NEWS</div>
+                <a href=""><img class="newsphoto" src="resources/image/news.png" alt=""></a>
+            </div>
+            <div class="news">
+                <a href="">LFC sprinkles Christmas magic on its local communities</a><br>
+                <a href="">Watch live: Liverpool's pre-Ajax press conference</a><br>
+                <a href="">Save 20 per cent on Nike kit with LFC's Cyber Monday deal</a><br>
+                <a href="">LFC plans to welcome fans back to Anfield</a>
+            </div>
             <div class="l-table">
                 <table>
+                    <caption>LEAGUE TABLE</caption>
                     <thead>
                         <tr>
-                            <td>
+                            <th>
                                 Pos.
-                            </td>
-                            <td>
+                            </th>
+                            <th>
                                 Points
-                            </td>
+                            </th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td id='pos1'></td>
+                            <th id='pos1'></th>
                             <td id="point1"></td>
                         </tr>
                         <tr>
-                            <td id="pos2"></td>
+                            <th id="pos2"></th>
                             <td id="point2"></td>
                         </tr>
                         <tr>
-                            <td id="pos3"></td>
+                            <th id="pos3"></th>
                             <td id="point3"></td>
                         </tr>
                         <tr>
-                            <td id="pos4"></td>
+                            <th id="pos4"></th>
                             <td id="point4"></td>
                         </tr>
                         <tr>
-                            <td id="pos5"></td>
+                            <th id="pos5"></th>
                             <td id="point5"></td>
                         </tr>
                     </tbody>
                 </table>
             </div>
         </div>
-
-        
         <!-- <div>conten-mid</div>
         <div>conten-bot</div>
         <div>footer</div>
