--- a/index.html
+++ b/index.html
@@ -103,8 +103,23 @@
                 </table>
             </div>
         </div>
-        <!-- <div>conten-mid</div>
-        <div>conten-bot</div>
+        <div>
+            <div class="tatic">
+                <img src="resources/image/anfield.JPG" alt="">
+                <a href="#" id="alison"><img  class="player" src="resources/image/alisson.jpg" alt=""></a>
+                <a href="#"><img id="vandijk" class="player" src="resources/image/vandijk.jpg" alt=""></a>
+                <a href="#"><img id="matip" class="player" src="resources/image/matip.jpg" alt=""></a>
+                <a href="#"><img id="robertson" class="player" src="resources/image/robertson.jpg" alt=""></a>
+                <a href="#"><img id="trent" class="player" src="resources/image/trent.jpg" alt=""></a>
+                <a href="#"><img id="henderson" class="player" src="resources/image/henderson.jpg" alt=""></a>
+                <a href="#"><img id="wijnaldum" class="player" src="resources/image/wijnaldum.jpg" alt=""></a>
+                <a href="#"><img id="fabio" class="player" src="resources/image/fabio.jpg" alt=""></a>
+                <a href="#"><img id="salah" class="player" src="resources/image/salah.jpg" alt=""></a>
+                <a href="#"><img id="mane" class="player" src="resources/image/mane.jpg" alt=""></a>
+                <a href="#"><img id="firmino" class="player" src="resources/image/firmino.jpg" alt=""></a>
+            </div>
+        </div>
+        <!-- <div>conten-bot</div>
         <div>footer</div>
         <div>Wikipedia mở cửa chính thức ngày 15 tháng 1 năm 2001, chỉ là một phiên bản tiếng Anh tại wikipedia.com, và ông Sanger giới thiệu nó lần đầu tiên trên danh sách gửi thư[21]. Trước đó, từ ngày 10 tháng 1, nó chỉ là một tính năng của Nupedia, trong đó ai nào có thể viết bài để được thêm vào bách khoa toàn thư sau khi được xem lại. Nó được bắt đầu lại bên ngoài Nupedia, sau khi các nhà chuyên môn của Ủy ban Tư vấn Nupedia phản đối kiểu phát triển của nó[22]. Sau đó, Wikipedia hoạt động như dự án riêng không có Nupedia bảo quản. Quy định "quan điểm trung lập" của nó được viết xuống vào những tháng đầu tiên, tuy nó sát với quy định "nonbias" (phi thiên vị) của Nupedia. Ngoài đó, chỉ có một vài nguyên tắc đầu tiên. Wikipedia được nhiều người đóng góp đến từ Nupedia, những tin nhắn tại Slashdot, và kết quả tìm kiếm. Nó tăng lên tới 20.000 bài viết bằng 18 ngôn ngữ vào cuối năm đầu[23]. Nupedia và Wikipedia hoạt động bên cạnh nhau đến khi máy chủ Nupedia bị ngừng hoạt động thường trực vào năm 2003, và cả nội dung Nupedia được đưa vào Wikipedia.
 
