--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
                 <a href=""><img class="newsphoto" src="resources/image/news.png" alt=""></a>
             </div>
             <div class="news">
-                <a href="">LFC sprinkles Christmas magic on its local communities</a><br>
-                <a href="">Watch live: Liverpool's pre-Ajax press conference</a><br>
-                <a href="">Save 20 per cent on Nike kit with LFC's Cyber Monday deal</a><br>
+                <a href="">LFC injury update: Alexander-Arnold, Keita, Shaqiri and Milner</a><hr>
+                <a href="">Jürgen Klopp: Virgil van Dijk is doing well in injury rehab</a><hr>
+                <a href="">LFC sprinkles Christmas magic on its local communities</a><hr>
+                <a href="">Watch live: Liverpool's pre-Ajax press conference</a><hr>
+                <a href="">Save 20 per cent on Nike kit with LFC's Cyber Monday deal</a><hr>
                 <a href="">LFC plans to welcome fans back to Anfield</a>
             </div>
             <div class="l-table">
@@ -103,7 +105,24 @@
                 </table>
             </div>
         </div>
-        <div>
+        <div class="content-mid">
+            <div class="sub-team">
+                <h6>First Team</h6>
+                <div>
+                    <a href="">Alisson Becker</a><br>
+                    <a href="">Virgil van Dijk</a><br>
+                    <a href="">Joe Gomez</a><br>
+                    <a href="">Andy Robertson</a><br>
+                    <a href="">Joel Matip</a><br>
+                    <a href="">Trent Alexander-Arnold</a><br>
+                    <a href="">Fabinho</a><br>
+                    <a href="">Georginio Wijnaldum</a><br>
+                    <a href="">Jordan Henderson</a><br>
+                    <a href="">Roberto Firmino</a><br>
+                    <a href="">Sadio Mane</a><br>
+                    <a href="">Mohamed Salah</a>
+                </div>
+            </div>
             <div class="tatic">
                 <img src="resources/image/anfield.JPG" alt="">
                 <a href="#" id="alison"><img  class="player" src="resources/image/alisson.jpg" alt=""></a>
@@ -113,10 +132,27 @@
                 <a href="#"><img id="trent" class="player" src="resources/image/trent.jpg" alt=""></a>
                 <a href="#"><img id="henderson" class="player" src="resources/image/henderson.jpg" alt=""></a>
                 <a href="#"><img id="wijnaldum" class="player" src="resources/image/wijnaldum.jpg" alt=""></a>
-                <a href="#"><img id="fabio" class="player" src="resources/image/fabio.jpg" alt=""></a>
+                <a href="#"><img id="fabinho" class="player" src="resources/image/fabio.jpg" alt=""></a>
                 <a href="#"><img id="salah" class="player" src="resources/image/salah.jpg" alt=""></a>
                 <a href="#"><img id="mane" class="player" src="resources/image/mane.jpg" alt=""></a>
                 <a href="#"><img id="firmino" class="player" src="resources/image/firmino.jpg" alt=""></a>
+            </div>
+            <div class="team-staff">
+                <h6>First Team Staff</h6> 
+                <div>
+                    <a href="">Jürgen Klopp</a><br>
+                    <a href="">Peter Krawietz</a><br>
+                    <a href="">Pepijn Lijnders</a><br>
+                    <a href="">John Achterberg</a><br>
+                    <a href="">Jack Robinson</a><br>
+                    <a href="">Vitor Matos</a><br>
+                    <a href="">Andreas Kornmayer</a><br>
+                    <a href="">Philipp Jacobsen</a><br>
+                    <a href="">Jim Moxon</a><br>
+                    <a href="">Conall Murtagh</a><br>
+                    <a href="">Tom King</a><br>
+                    <a href="">Jordan Fairclough</a><br>
+                </div>
             </div>
         </div>
         <!-- <div>conten-bot</div>
