--- a/index.html
+++ b/index.html
@@ -53,18 +53,23 @@
         </div>
 
         <!-- Content  -->
-        
+        <!-- Conten top -->
         <div class="content-top">
             <div>
                 <div id="news">LATEST NEWS</div>
                 <a href=""><img class="newsphoto" src="resources/image/news.png" alt=""></a>
             </div>
             <div class="news">
-                <a href="">LFC injury update: Alexander-Arnold, Keita, Shaqiri and Milner</a><hr>
-                <a href="">Jürgen Klopp: Virgil van Dijk is doing well in injury rehab</a><hr>
-                <a href="">LFC sprinkles Christmas magic on its local communities</a><hr>
-                <a href="">Watch live: Liverpool's pre-Ajax press conference</a><hr>
-                <a href="">Save 20 per cent on Nike kit with LFC's Cyber Monday deal</a><hr>
+                <a href="">LFC injury update: Alexander-Arnold, Keita, Shaqiri and Milner</a>
+                <hr>
+                <a href="">Jürgen Klopp: Virgil van Dijk is doing well in injury rehab</a>
+                <hr>
+                <a href="">LFC sprinkles Christmas magic on its local communities</a>
+                <hr>
+                <a href="">Watch live: Liverpool's pre-Ajax press conference</a>
+                <hr>
+                <a href="">Save 20 per cent on Nike kit with LFC's Cyber Monday deal</a>
+                <hr>
                 <a href="">LFC plans to welcome fans back to Anfield</a>
             </div>
             <div class="l-table">
@@ -105,55 +110,263 @@
                 </table>
             </div>
         </div>
+        <!-- Conten mid -->
         <div class="content-mid">
-            <div class="sub-team">
-                <h6>First Team</h6>
-                <div>
-                    <a href="">Alisson Becker</a><br>
-                    <a href="">Virgil van Dijk</a><br>
-                    <a href="">Joe Gomez</a><br>
-                    <a href="">Andy Robertson</a><br>
-                    <a href="">Joel Matip</a><br>
-                    <a href="">Trent Alexander-Arnold</a><br>
-                    <a href="">Fabinho</a><br>
-                    <a href="">Georginio Wijnaldum</a><br>
-                    <a href="">Jordan Henderson</a><br>
-                    <a href="">Roberto Firmino</a><br>
-                    <a href="">Sadio Mane</a><br>
-                    <a href="">Mohamed Salah</a>
+            <div class="team-title">
+                <h5>FIRST TEAM</h5>
+            </div>
+            <div class="team">
+                <div class="goal">
+                    <h6>GOALKEEPERS</h6>
+                    <hr>
+                    <ul>
+                        <li>
+                            <a href="#" class="info">
+                                <div class="player">
+                                    <img src="resources/image/alisson.jpeg" alt="">
+                                </div>
+                                <div class="numb">
+                                    1
+                                </div>
+                                <div class="name">
+                                    Alisson Becker
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="info">
+                                <div class="player">
+                                    <img src="resources/image/adrian.jpeg" alt="">
+                                </div>
+                                <div class="numb">
+                                    13
+                                </div>
+                                <div class="name">
+                                    Adrian
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="def">
+                    <div class="clearfix"></div>
+                    <h6>DEFENDERS</h6>
+                    <hr>
+                    <ul>
+                        <li>
+                            <a href="#" class="info">
+                                <div class="player">
+                                    <img src="resources/image/vandijk.jpeg" alt="">
+                                </div>
+                                <div class="numb">
+                                    4
+                                </div>
+                                <div class="name">
+                                    Virgil van Dijk
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="info">
+                                <div class="player">
+                                    <img src="resources/image/gomez.jpeg" alt="">
+                                </div>
+                                <div class="numb">
+                                    12
+                                </div>
+                                <div class="name">
+                                    Joe Gomez
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="info">
+                                <div class="player">
+                                    <img src="resources/image/robertson.jpeg" alt="">
+                                </div>
+                                <div class="numb">
+                                    26
+                                </div>
+                                <div class="name">
+                                    Andy Robertson
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="info">
+                                <div class="player">
+                                    <img src="resources/image/matip.jpeg" alt="">
+                                </div>
+                                <div class="numb">
+                                    32
+                                </div>
+                                <div class="name">
+                                    Joel Matip
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="info">
+                                <div class="player">
+                                    <img src="resources/image/trent.jpeg" alt="">
+                                </div>
+                                <div class="numb">
+                                    66
+                                </div>
+                                <div class="name">
+                                    Trent Alexander-Arnold
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="mid">
+                    <div class="clearfix"></div>
+                    <h6>MIDFIELDERS</h6>
+                    <hr>
+                    <ul>
+                        <li>
+                            <a href="#" class="info">
+                                <div class="player">
+                                    <img src="resources/image/fabinho.jpeg" alt="">
+                                </div>
+                                <div class="numb">
+                                    3
+                                </div>
+                                <div class="name">
+                                    Fabinho
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="info">
+                                <div class="player">
+                                    <img src="resources/image/thiago.jpeg" alt="">
+                                </div>
+                                <div class="numb">
+                                    6
+                                </div>
+                                <div class="name">
+                                    Thiago Alcantara
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="info">
+                                <div class="player">
+                                    <img src="resources/image/milner.jpeg" alt="">
+                                </div>
+                                <div class="numb">
+                                    7
+                                </div>
+                                <div class="name">
+                                    James Milner
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="info">
+                                <div class="player">
+                                    <img src="resources/image/keita.jpeg" alt="">
+                                </div>
+                                <div class="numb">
+                                    8
+                                </div>
+                                <div class="name">
+                                    Naby Keita
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="info">
+                                <div class="player">
+                                    <img src="resources/image/henderson.jpeg" alt="">
+                                </div>
+                                <div class="numb">
+                                    14
+                                </div>
+                                <div class="name">
+                                    Jordan Henderson
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="atk">
+                    <div class="clearfix"></div>
+                    <h6>FORWARDS</h6>
+                    <hr>
+                    <ul>
+                        <li>
+                            <a href="#" class="info">
+                                <div class="player">
+                                    <img src="resources/image/firmino.jpeg" alt="">
+                                </div>
+                                <div class="numb">
+                                    9
+                                </div>
+                                <div class="name">
+                                    Roberto Firmino
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="info">
+                                <div class="player">
+                                    <img src="resources/image/mane.jpeg" alt="">
+                                </div>
+                                <div class="numb">
+                                    10
+                                </div>
+                                <div class="name">
+                                    Sadio Mane
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="info">
+                                <div class="player">
+                                    <img src="resources/image/salah.jpeg" alt="">
+                                </div>
+                                <div class="numb">
+                                    11
+                                </div>
+                                <div class="name">
+                                    Mohamed Salah
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="info">
+                                <div class="player">
+                                    <img src="resources/image/jota.jpeg" alt="">
+                                </div>
+                                <div class="numb">
+                                    20
+                                </div>
+                                <div class="name">
+                                    Diogo Jota
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="info">
+                                <div class="player">
+                                    <img src="resources/image/origi.jpeg" alt="">
+                                </div>
+                                <div class="numb">
+                                    27
+                                </div>
+                                <div class="name">
+                                    Divock Origi
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="clearfix"></div>
                 </div>
             </div>
-            <div class="tatic">
-                <img src="resources/image/anfield.JPG" alt="">
-                <a href="#" id="alison"><img  class="player" src="resources/image/alisson.jpg" alt=""></a>
-                <a href="#"><img id="vandijk" class="player" src="resources/image/vandijk.jpg" alt=""></a>
-                <a href="#"><img id="matip" class="player" src="resources/image/matip.jpg" alt=""></a>
-                <a href="#"><img id="robertson" class="player" src="resources/image/robertson.jpg" alt=""></a>
-                <a href="#"><img id="trent" class="player" src="resources/image/trent.jpg" alt=""></a>
-                <a href="#"><img id="henderson" class="player" src="resources/image/henderson.jpg" alt=""></a>
-                <a href="#"><img id="wijnaldum" class="player" src="resources/image/wijnaldum.jpg" alt=""></a>
-                <a href="#"><img id="fabinho" class="player" src="resources/image/fabio.jpg" alt=""></a>
-                <a href="#"><img id="salah" class="player" src="resources/image/salah.jpg" alt=""></a>
-                <a href="#"><img id="mane" class="player" src="resources/image/mane.jpg" alt=""></a>
-                <a href="#"><img id="firmino" class="player" src="resources/image/firmino.jpg" alt=""></a>
-            </div>
-            <div class="team-staff">
-                <h6>First Team Staff</h6> 
-                <div>
-                    <a href="">Jürgen Klopp</a><br>
-                    <a href="">Peter Krawietz</a><br>
-                    <a href="">Pepijn Lijnders</a><br>
-                    <a href="">John Achterberg</a><br>
-                    <a href="">Jack Robinson</a><br>
-                    <a href="">Vitor Matos</a><br>
-                    <a href="">Andreas Kornmayer</a><br>
-                    <a href="">Philipp Jacobsen</a><br>
-                    <a href="">Jim Moxon</a><br>
-                    <a href="">Conall Murtagh</a><br>
-                    <a href="">Tom King</a><br>
-                    <a href="">Jordan Fairclough</a><br>
-                </div>
-            </div>
+
         </div>
         <!-- <div>conten-bot</div>
         <div>footer</div>
